k8s_common/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mooc-app-ingress
  namespace: exercise-namespace
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345
          - pathType: Prefix
            path: "/pingpong"
            backend:
              service:
                name: app-http-svc
                port:
                  number: 80
